--- a/packages/plugin-ext/src/main/browser/webview/pre/fake.html
+++ b/packages/plugin-ext/src/main/browser/webview/pre/fake.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
+Test
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
